--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         const renderer = new THREE.WebGLRenderer()
         renderer.setSize(width, height)
         renderer.pixelRatio = window.devicePixelRatio ?? renderer.pixelRatio
+        renderer.autoClear = false
 
         document.body.appendChild(renderer.domElement)
         const controls = new OrbitControls(camera, renderer.domElement)
@@ -47,22 +48,35 @@
 
         scene.add(light)
 
-        const redMaterial = new THREE.MeshStandardMaterial({ color: "red", opacity: 0.5, transparent: true, side: THREE.DoubleSide })
-        const blueMaterial = new THREE.MeshStandardMaterial({ color: "blue", opacity: 0.5, transparent: true, side: THREE.DoubleSide })
+        const redMaterial = new THREE.MeshStandardMaterial({ color: "red", opacity: 0.5, transparent: true })
+        const blueMaterial = new THREE.MeshStandardMaterial({ color: "blue", opacity: 0.5, transparent: true })
 
         const geometry = new THREE.BoxGeometry(1, 1, 1)
 
         const redMesh = new THREE.Mesh(geometry, redMaterial)
         redMesh.rotation.y = Math.PI / 4
+
         const blueMesh = new THREE.Mesh(geometry, blueMaterial)
         blueMesh.rotation.y = Math.PI / 4
-        blueMesh.position.z = -1
-        blueMesh.position.x = -1
+        blueMesh.scale.x = 0.6
+        blueMesh.scale.y = 0.6
+        blueMesh.scale.z = 0.6
 
         scene.add(redMesh, blueMesh)
 
         function render() {
+            blueMaterial.side = THREE.BackSide
+            redMaterial.side = THREE.BackSide
+            redMaterial.renderOrder = 1
+            blueMesh.renderOrder = 2
             renderer.render(scene, camera)
+
+            redMaterial.renderOrder = 2
+            blueMesh.renderOrder = 1
+            blueMaterial.side = THREE.FrontSide
+            redMaterial.side = THREE.FrontSide
+            renderer.render(scene, camera)
+
             window.requestAnimationFrame(render)
         }
 
